<resources>
    <string name="app_name">Scancare</string>
    <string name="title_home">Home</string>
    <string name="title_scanning">Scanning</string>
    <string name="title_favorite">Favorite</string>
    <string name="desc_carousel_1">Did You Already Wash Your Face Today? </string>
    <string name="desc_carousel_2">Scan your Face Now! </string>
    <string name="desc_carousel_3">This are Tips to Make Your Face Amazing</string>
    <string name="scancare">Scancare</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="title_recommended">Top 10 Recommended Skincare</string>
    <string name="title_articles">Articles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="signin">Sign In</string>
    <string name="recommended_title">Top 10 Recommended Skincare</string>
    <string name="see_all">See all</string>
    <string name="percent">69%</string>
    <string name="all_possibility">All Possibility</string>
    <string name="the_result">The Result</string>
    <string name="acne_title">Acne Title</string>
    <string name="title_detail_disease">What is it?</string>
    <string name="times_string">Once in A day</string>
    <string name="skincare_recomendation">Skincare Recomendation</string>
    <string name="title_articles_temp">This is the example of a very long article title that needs to wrap onto two lines</string>
    <string name="welcome_string">Welcome Back,</string>
    <string name="username_tv">Username!</string>
    <string name="logout">Logout</string>
    <string name="login_message">You are not logged in, you need to log in to see your favorites product</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="login_now">Login Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="home">Home</string>
</resources>