<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.LoginActivity">

    <ImageView
        android:id="@+id/banner_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/banner_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/textfont_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_now"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/banner_login"
        app:layout_constraintTop_toBottomOf="@id/banner_login" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        style="@style/EditTextHintFont"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/banner_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        app:layout_constraintEnd_toEndOf="@id/banner_login"
        />



    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        style="@style/EditTextHintFont"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButtonGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/tv_forget"
        style="@style/textfont_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@id/signInButtonGoogle"
        app:layout_constraintTop_toBottomOf="@id/signInButtonGoogle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailSignInButton"
        app:cornerRadius="10dp"
        style="@style/ButtonNoCaps"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="@id/tv_forget"
        app:layout_constraintEnd_toEndOf="@id/signInButtonGoogle"
        app:layout_constraintTop_toTopOf="@id/tv_forget" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/emailSignInButton"
        app:layout_constraintStart_toStartOf="@id/tv_forget"
        app:layout_constraintTop_toBottomOf="@id/tv_forget">

        <TextView
            android:id="@+id/tv_dont_have"
            style="@style/textfont_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_tv"
            style="@style/textfont_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintStart_toEndOf="@id/tv_dont_have"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>