<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.RegisterActivity">

    <ImageView
        android:id="@+id/banner_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/banner_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_title"
        style="@style/textfont_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/banner_register"
        app:layout_constraintTop_toBottomOf="@id/banner_register" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"
        style="@style/EditTextHintFont"
        app:layout_constraintEnd_toEndOf="@id/banner_register"
        app:layout_constraintStart_toStartOf="@id/tv_register_title"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        style="@style/EditTextHintFont"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        style="@style/EditTextHintFont"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/ButtonNoCaps"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>