<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.product_detail.ProductDetailActivity">

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_product_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:id="@+id/product_brand"
            style="@style/textfont_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/brand_name"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_product_container" />

        <TextView
            android:id="@+id/product_kind"
            style="@style/textfont_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/product_brand"
            app:layout_constraintTop_toBottomOf="@id/product_brand" />

        <TextView
            android:id="@+id/product_description"
            style="@style/textfont_primary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_kind"
            tools:text="@tools:sample/lorem/random" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="255dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_favorite_red_24dp"
            app:layout_constraintBottom_toBottomOf="@id/product_kind"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageview_timer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_timer_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline5" />

        <TextView
            android:id="@+id/tv_times"
            style="@style/textfont_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/times_string"
            app:layout_constraintBottom_toBottomOf="@id/imageview_timer"
            app:layout_constraintEnd_toStartOf="@id/imageview_leaf"
            app:layout_constraintStart_toEndOf="@id/imageview_timer"
            app:layout_constraintTop_toTopOf="@id/imageview_timer" />


        <ImageView
            android:id="@+id/imageview_leaf"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_leaf_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_ingredients"
            app:layout_constraintEnd_toStartOf="@id/tv_ingredients"
            app:layout_constraintStart_toEndOf="@+id/tv_times"
            app:layout_constraintTop_toTopOf="@id/tv_ingredients" />

        <TextView
            android:id="@+id/tv_ingredients"
            style="@style/textfont_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/times_string"
            app:layout_constraintBottom_toBottomOf="@id/imageview_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageview_timer" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="292dp" />


</androidx.constraintlayout.widget.ConstraintLayout>